# smp

./: README.md  main.py  sample.txt
smp/: main.py  pyproject.toml
smp/tests/: test_smp.py
