[tool.poetry]
name = "smp"
version = "0.1.0"
description = "smp for simple mail helper"
authors = ["kxdc <kvuexlu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kxdc/smp"
repository = "https://github.com/kxdc/smp"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
